syntax = "proto3";

package order_proto;

option go_package="https://github.com/NAVANEESHKM/ecommerce_order";

import "order_proto/remove_order.proto";
import "order_proto/create_order.proto";
import "order_proto/get_order.proto";
service OrderService{
    
    rpc RemoveOrderCustomer(RemoveOrderRequest)returns(RemoveOrderResponse);
    rpc CreateOrder(CustomerOrder)returns(CustomerResponse);
    rpc GetOrderDetails(GetOrderRequest) returns (GetOrderResponse);
}